--- a/Kartverket.Geonorge.Download/Views/MachineAccounts/Create.cshtml
+++ b/Kartverket.Geonorge.Download/Views/MachineAccounts/Create.cshtml
@@ -1,10 +1,10 @@
 ﻿@model Kartverket.Geonorge.Download.Models.MachineAccount
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Opprett ny";
 }
 
-<h2>Create</h2>
+<h2>@ViewBag.Title</h2>
 
 
 @using (Html.BeginForm()) 
