--- a/Kartverket.Geonorge.Download/Views/Shared/_Layout.cshtml
+++ b/Kartverket.Geonorge.Download/Views/Shared/_Layout.cshtml
@@ -31,8 +31,8 @@
         var authenticationData = {
             supportsLogin: true,
             isAuthenticated: @Request.IsAuthenticated.ToString().ToLower(),
-            urlActionSignOut: '@Url.Action("LogOut", "AuthServices")',
-            urlActionSignIn: '@Url.Action("SignIn", "AuthServices", new { ReturnUrl = Request.Url })'
+            urlActionSignOut: '@VirtualPathUtility.ToAbsolute("~/AuthServices/LogOut")',
+            urlActionSignIn: '@VirtualPathUtility.ToAbsolute("~/AuthServices/SignIn?ReturnUrl=")@Request.Url'
             @if (Request.IsAuthenticated)
             {
                 foreach (var c in System.Security.Claims.ClaimsPrincipal.Current.Claims) {
