Implement SharedPartial module

--- a/Kartverket.Geonorge.Download/Views/Shared/_Layout.cshtml
+++ b/Kartverket.Geonorge.Download/Views/Shared/_Layout.cshtml
@@ -22,45 +22,28 @@
         }
         Nedlasting
     </title>
-    <!-- Stylesheets -->
-    @Styles.Render("~/Content/bower_components/kartverket-felleskomponenter/assets/css/styles")
     <!-- Scripts -->
     <script>
-        var applicationEnvironment = '@Html.EnvironmentName()';
         var applicationVersionNumber = '@Html.ApplicationVersionNumber()';
-        var authenticationData = {
-            supportsLogin: true,
-            isAuthenticated: @Request.IsAuthenticated.ToString().ToLower(),
-            urlActionSignOut: '@VirtualPathUtility.ToAbsolute("~/AuthServices/LogOut")',
-            urlActionSignIn: '@VirtualPathUtility.ToAbsolute("~/AuthServices/SignIn?ReturnUrl=")@Request.Url'
-            @if (Request.IsAuthenticated)
-            {
-                foreach (var c in System.Security.Claims.ClaimsPrincipal.Current.Claims) {
-                    if (c.Type == "urn:oid:0.9.2342.19200300.100.1.1" || c.Type == "username") {
-                        <text>, userName: '@c.Value'</text>
-                    }
-                }
-            }
-        }
+        var applicationEnvironment = '@Html.EnvironmentName()';
 
         var cultureData = {
-            supportsMultiCulture: @(Html.SupportsMultiCulture() ? "true" : "false"),
-            urlSetCulture: '@VirtualPathUtility.ToAbsolute("~/Home/SetCulture?culture=")@Kartverket.Geonorge.Download.Models.Translations.Culture.EnglishCode&ReturnUrl=@Request.Url',
-            urlSetCultureNorwegian: '@VirtualPathUtility.ToAbsolute("~/Home/SetCulture?culture=")@Kartverket.Geonorge.Download.Models.Translations.Culture.NorwegianCode&ReturnUrl=@Request.Url',
+            friendlyUrlEN: '@Html.Raw(VirtualPathUtility.ToAbsolute("~/Home/SetCulture?culture="))@Kartverket.Geonorge.Download.Models.Translations.Culture.EnglishCode&ReturnUrl=@Request.Url',
+            friendlyUrlNO: '@Html.Raw(VirtualPathUtility.ToAbsolute("~/Home/SetCulture?culture="))@Kartverket.Geonorge.Download.Models.Translations.Culture.NorwegianCode&ReturnUrl=@Request.Url',
             currentCulture: '@CultureHelper.GetCurrentCulture()'
-        };
+            };
     </script>
 
-    @Scripts.Render("~/Content/bower_components/kartverket-felleskomponenter/assets/js/scripts")
 
 </head>
 
-<body class="geonorge-container prototype  geonorge ng-scope" ng-app="geonorge">
+<body class="geonorge-container prototype  geonorge">
 
     <div id="loading-animation" class="loading-animation" style="display: none;"></div>
 
-    @RenderPage("~/Content/bower_components/kartverket-felleskomponenter/assets/partials/_Analytics.min.cshtml")
-    @RenderPage("~/Content/bower_components/kartverket-felleskomponenter/assets/partials/_SharedMenu.min.cshtml")
+    @Html.Raw(File.ReadAllText(Server.MapPath("~/dist/partials/Header.html")))
+    @Styles.Render("~/Content/bower_components/kartverket-felleskomponenter/assets/css/styles")
+
     <div class="body-content">
         <div class="container container-breadcrumbs" id="navTabCont">
             <ul class="breadcrumbs col-md-12">
@@ -73,13 +56,13 @@
         </div>
 
         @if (TempData["success"] != null)
-            {
+        {
             <div class="alert alert-success">
                 @TempData["success"]
             </div>
         }
         @if (TempData["failure"] != null)
-            {
+        {
             <div class="alert alert-danger">
                 @TempData["failure"]
             </div>
@@ -101,5 +84,20 @@
     {
         @RenderPage("~/Content/bower_components/kartverket-felleskomponenter/assets/partials/_Footer_eng.min.cshtml");
     }
+
+    <script>
+        searchOption.loginUrl = '@Html.Raw(VirtualPathUtility.ToAbsolute("~/AuthServices/SignIn?ReturnUrl="))@Request.Url';
+        searchOption.logoutUrl = '@Html.Raw(VirtualPathUtility.ToAbsolute("~/AuthServices/LogOut"))';
+        searchOption.loggedIn = @Request.IsAuthenticated.ToString().ToLower();
+        searchOption.epiBaseUrl = '@Html.GeonorgeUrl()';
+        var orderItems = Cookies.get('orderitems');
+        if (orderItems && orderItems > 0) {
+            $('.downloads__count').show();
+            $('.downloads__count').text(orderItems);
+        }
+    </script>
+
+    @Scripts.Render("~/Content/bower_components/kartverket-felleskomponenter/assets/js/scripts")
+    @RenderPage("~/Content/bower_components/kartverket-felleskomponenter/assets/partials/_Analytics.min.cshtml")
 </body>
 </html>
