--- a/Kartverket.Geonorge.Download/Views/Shared/_Layout.cshtml
+++ b/Kartverket.Geonorge.Download/Views/Shared/_Layout.cshtml
@@ -48,9 +48,9 @@
         <div class="container container-breadcrumbs" id="navTabCont">
             <ul class="breadcrumbs col-md-12">
                 <li><a href="@Html.GeonorgeUrl()">Geonorge</a></li>
-                <li><a href="@Html.GeonorgeUrl()for-utviklere/">@UI.ForDevelopers</a></li>
-                <li><a href="@Html.GeonorgeUrl()for-utviklere/APIer-og-grensesnitt/">@UI.APIsAndInterfaces</a></li>
-                <li><a href="@Html.GeonorgeUrl()for-utviklere/APIer-og-grensesnitt/nedlastingsapiet/">@UI.DownloadAPI</a></li>
+                <li><a href="@Html.GeonorgeUrl()verktoy/">@UI.ForDevelopers</a></li>
+                <li><a href="@Html.GeonorgeUrl()verktoy/APIer-og-grensesnitt/">@UI.APIsAndInterfaces</a></li>
+                <li><a href="@Html.GeonorgeUrl()verktoy/APIer-og-grensesnitt/nedlastingsapiet/">@UI.DownloadAPI</a></li>
                 @RenderSection("breadcrumb", false)
             </ul>
         </div>
