--- a/Kartverket.Geonorge.Download/Views/Shared/_Layout.cshtml
+++ b/Kartverket.Geonorge.Download/Views/Shared/_Layout.cshtml
@@ -22,6 +22,16 @@
         }
         Nedlasting
     </title>
+    <script>
+        var applicationVersionNumber = '@Html.ApplicationVersionNumber()';
+        var applicationEnvironment = '@Html.EnvironmentName()';
+
+        var cultureData = {
+            friendlyUrlEN: '@Html.Raw(VirtualPathUtility.ToAbsolute("~/Home/SetCulture?culture="))@Kartverket.Geonorge.Download.Models.Translations.Culture.EnglishCode&ReturnUrl=@Request.Url',
+            friendlyUrlNO: '@Html.Raw(VirtualPathUtility.ToAbsolute("~/Home/SetCulture?culture="))@Kartverket.Geonorge.Download.Models.Translations.Culture.NorwegianCode&ReturnUrl=@Request.Url',
+            currentCulture: '@CultureHelper.GetCurrentCulture()'
+            };
+    </script>
 </head>
 
 <body class="geonorge-container prototype  geonorge">
@@ -29,6 +39,7 @@
     <div id="loading-animation" class="loading-animation" style="display: none;"></div>
 
     @Html.Raw(File.ReadAllText(Server.MapPath("~/dist/partials/Header.html")))
+    @Styles.Render("~/shared-partials-styles")
     @Styles.Render("~/Content/bower_components/kartverket-felleskomponenter/assets/css/styles")
 
     <div class="body-content">
@@ -71,17 +82,7 @@
     {
         @RenderPage("~/Content/bower_components/kartverket-felleskomponenter/assets/partials/_Footer_eng.min.cshtml");
     }
-    <script>
-        var applicationVersionNumber = '@Html.ApplicationVersionNumber()';
-        var applicationEnvironment = '@Html.EnvironmentName()';
-
-        var cultureData = {
-            friendlyUrlEN: '@Html.Raw(VirtualPathUtility.ToAbsolute("~/Home/SetCulture?culture="))@Kartverket.Geonorge.Download.Models.Translations.Culture.EnglishCode&ReturnUrl=@Request.Url',
-            friendlyUrlNO: '@Html.Raw(VirtualPathUtility.ToAbsolute("~/Home/SetCulture?culture="))@Kartverket.Geonorge.Download.Models.Translations.Culture.NorwegianCode&ReturnUrl=@Request.Url',
-            currentCulture: '@CultureHelper.GetCurrentCulture()'
-            };
-    </script>
-    @Scripts.Render("~/shared-partials")
+    @Scripts.Render("~/shared-partials-scripts")
     <script>
         searchOption.loginUrl = '@Html.Raw(VirtualPathUtility.ToAbsolute("~/AuthServices/SignIn?ReturnUrl="))@Request.Url';
         searchOption.logoutUrl = '@Html.Raw(VirtualPathUtility.ToAbsolute("~/AuthServices/LogOut"))';
