Link to java version

--- a/Kartverket.Geonorge.Download/Areas/HelpPage/Views/Help/Documentation.cshtml
+++ b/Kartverket.Geonorge.Download/Areas/HelpPage/Views/Help/Documentation.cshtml
@@ -350,4 +350,5 @@ osv.</pre>
         </div>
     </section>
 </div>
+<p><a href="https://github.com/ngu/geonorge-nedlastingapi" target="_blank">Java-versjon</a></p>
 <p><a href="~/Help/DocumentationV3">Endringer i versjon 3 av nedlastingsApi</a></p>
