Add roles for basic auth

--- a/Kartverket.Geonorge.Download/Views/MachineAccounts/Edit.cshtml
+++ b/Kartverket.Geonorge.Download/Views/MachineAccounts/Edit.cshtml
@@ -48,6 +48,12 @@
             @Html.ValidationMessageFor(model => model.ContactEmail, "", new { @class = "text-danger" })
         </div>
     </div>
+    <div class="form-group">
+        <label class="control-label col-md-2" for="Roles">Roles</label>
+        <div class="col-md-10">
+            @Html.DropDownList("RolesSelected", (MultiSelectList)ViewBag.RolesData, new { multiple = "multiple" })
+        </div>
+    </div>
 
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
