Display roles account details

--- a/Kartverket.Geonorge.Download/Views/MachineAccounts/Details.cshtml
+++ b/Kartverket.Geonorge.Download/Views/MachineAccounts/Details.cshtml
@@ -49,6 +49,12 @@
         <dd>
             @Html.DisplayFor(model => model.Created)
         </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Roles)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Roles)
+        </dd>
 
     </dl>
 </div>
