Fix issues with menu and breadcrumbs

--- a/Kartverket.Geonorge.Download/Views/Shared/_Layout.cshtml
+++ b/Kartverket.Geonorge.Download/Views/Shared/_Layout.cshtml
@@ -14,6 +14,7 @@
         <meta name="description" content="@ViewBag.MetaDescription" />
     }
     <link rel="shortcut icon" type="image/x-icon" href="@Html.KartkatalogenUrl()Content/img/favicon.ico" />
+    <link rel="stylesheet" href="/Content/site.css" />
 
 
     <title>
@@ -36,7 +37,7 @@
     </script>
 </head>
 
-<body class="geonorge-container prototype  geonorge">
+<body class="geonorge-container prototype geonorge fixed-menu-margin">
 
     <div id="loading-animation" class="loading-animation" style="display: none;"></div>
 
@@ -123,6 +124,6 @@
             <!-- @role.Value-->
         }
     }
-    <script src="https://cdn.jsdelivr.net/npm/@("@kartverket/geonorge-web-components@0.1.33/MainNavigation.js")"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@("@kartverket/geonorge-web-components@0.1.41/MainNavigation.js")"></script>
 </body>
 </html>
