Info email required polygon selected

--- a/Kartverket.Geonorge.Download/Areas/HelpPage/Views/Help/Documentation.cshtml
+++ b/Kartverket.Geonorge.Download/Areas/HelpPage/Views/Help/Documentation.cshtml
@@ -99,7 +99,7 @@
                             </td>
                         </tr>
                     </tbody>
-                </table><h3>Sende inn en ordre/bestilling</h3><p>Når man velger å laste ned det man har i kurv går det et kall til de ulike etatene man har valgt data for, her er eksempel for Geonorge, https://nedlasting.geonorge.no/api/v2/order:</p><table class="wysiwyg-macro" data-macro-name="code" data-macro-parameters="language=text" data-macro-schema-version="1" data-macro-body-type="PLAIN_TEXT" data-macro-id="62efbc43-5bbc-49f1-bab5-fc619ade7bb7" style="background-image: url(/wiki/plugins/servlet/confluence/placeholder/macro-heading?definition=e2NvZGU6bGFuZ3VhZ2U9dGV4dH0&amp;locale=no_NO&amp;version=2); background-repeat: no-repeat">
+                </table><h3>Sende inn en ordre/bestilling</h3><p>Dersom man har valgt polygon fra kart er det påkrevd å sende med email da det skal utføres en klippe-jobb som brukeren blir informert om på epost. Når man velger å laste ned det man har i kurv går det et kall til de ulike etatene man har valgt data for, her er eksempel for Geonorge, https://nedlasting.geonorge.no/api/v2/order:</p><table class="wysiwyg-macro" data-macro-name="code" data-macro-parameters="language=text" data-macro-schema-version="1" data-macro-body-type="PLAIN_TEXT" data-macro-id="62efbc43-5bbc-49f1-bab5-fc619ade7bb7" style="background-image: url(/wiki/plugins/servlet/confluence/placeholder/macro-heading?definition=e2NvZGU6bGFuZ3VhZ2U9dGV4dH0&amp;locale=no_NO&amp;version=2); background-repeat: no-repeat">
                     <tbody>
                         <tr>
                             <td class="wysiwyg-macro-body">
