--- a/Kartverket.Geonorge.Download/Views/Shared/_Layout.cshtml
+++ b/Kartverket.Geonorge.Download/Views/Shared/_Layout.cshtml
@@ -85,20 +85,8 @@
 
     </div>
     <geonorge-footer language="@CultureHelper.GetCurrentCulture()" version="@Html.ApplicationVersionNumber()" environment="@Html.EnvironmentName()" />
-    @Scripts.Render("~/shared-partials-scripts")
-    <script>
-        searchOption.loginUrl = '@Html.Raw(Url.Action("SignIn", "Home"))';
-        searchOption.logoutUrl = '@Html.Raw(Url.Action("SignOut", "Home"))';
-        searchOption.loggedIn = @Request.IsAuthenticated.ToString().ToLower();
-        searchOption.epiBaseUrl = '@Html.GeonorgeUrl()';
-        var orderItems = Cookies.get('orderitems');
-        if (orderItems && orderItems > 0) {
-            $('.downloads__count').show();
-            $('.downloads__count').text(orderItems);
-        }
-    </script>
 
-    @Scripts.Render("~/Content/bower_components/kartverket-felleskomponenter/assets/js/scripts")
+    <script>var environmentIsProduction = @(Html.EnvironmentName() == "" ? "true" : "false");</script>
     @RenderPage("~/Content/bower_components/kartverket-felleskomponenter/assets/partials/_Analytics.min.cshtml")
 
     @if (Html.EnvironmentName() == "dev" && HttpContext.Current.IsDebuggingEnabled)
@@ -117,7 +105,6 @@
             <!-- @role.Value-->
         }
     }
-    <script src="https://cdn.jsdelivr.net/npm/@("@kartverket/geonorge-web-components@0.2.6/MainNavigation.js")"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@("@kartverket/geonorge-web-components@0.2.6/GeonorgeFooter.js")"></script>
+    @Scripts.Render("~/node-modules/scripts")
 </body>
 </html>
